[tool.poetry]
name = "vector-routes"
version = "0.1.0"
description = ""
authors = ["garbanlp <jorgegalber@gmail.com>"]
readme = "README.md"
packages = [{include = "vector_routes"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qdrant-client = "^1.2.0"
sentence-transformers = "^2.2.2"
streamlit = "^1.23.1"
sqlmodel = "^0.0.8"
fastapi = "^0.96.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
